[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/resources/menu/settings/settingsmenu_theme.tres" type="Theme" id=1]
[ext_resource path="res://assets/menu/icons/settings_icon.png" type="Texture" id=2]
[ext_resource path="res://scenes/menu/settings/WindowResolutionButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/menu/settings/WindowModeButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/fonts/Orbitron/Orbitron-VariableFont_wght.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://scripts/menu/SettingsOverlay.gd" type="Script" id=6]
[ext_resource path="res://assets/resources/menu/settings/category_title_theme.tres" type="Theme" id=7]
[ext_resource path="res://assets/menu/icons/active_online_icon.png" type="Texture" id=8]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.882353 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.0941176, 0.0941176, 0.0941176, 1 )

[sub_resource type="DynamicFont" id=2]
size = 30
use_mipmaps = true
use_filter = true
font_data = ExtResource( 5 )

[node name="SettingsOverlay" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 6 )

[node name="Background" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )

[node name="SettingsHeader" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 0.075
margin_bottom = 0.159996
custom_styles/panel = SubResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsHeader"]
margin_right = 1920.0
margin_bottom = 81.16

[node name="TitleBar" type="HBoxContainer" parent="SettingsHeader/VBoxContainer"]
margin_right = 1920.0
margin_bottom = 39.0

[node name="SettingsIcon" type="NinePatchRect" parent="SettingsHeader/VBoxContainer/TitleBar"]
margin_bottom = 39.0
texture = ExtResource( 2 )

[node name="Title" type="Label" parent="SettingsHeader/VBoxContainer/TitleBar"]
margin_left = 4.0
margin_right = 179.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 2 )
text = "Settings"
valign = 1
uppercase = true

[node name="Searchbar" type="LineEdit" parent="SettingsHeader/VBoxContainer"]
margin_top = 43.0
margin_right = 1920.0
margin_bottom = 79.0
placeholder_text = "Search"
caret_blink = true

[node name="MainPane" type="HBoxContainer" parent="."]
anchor_top = 0.075
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
custom_constants/separation = 10

[node name="CategoryChecks" type="VBoxContainer" parent="MainPane"]
margin_right = 50.0
margin_bottom = 979.0
rect_min_size = Vector2( 50, 0 )

[node name="NetworkButton" type="PanelContainer" parent="MainPane/CategoryChecks"]
margin_right = 50.0
margin_bottom = 50.0

[node name="NetworkIcon" type="TextureRect" parent="MainPane/CategoryChecks/NetworkButton"]
margin_left = 7.0
margin_top = 7.0
margin_right = 43.0
margin_bottom = 43.0
rect_min_size = Vector2( 0, 36 )
texture = ExtResource( 8 )
expand = true
stretch_mode = 5

[node name="VSeparator" type="VSeparator" parent="MainPane"]
margin_left = 60.0
margin_right = 64.0
margin_bottom = 979.0

[node name="ScrollContainer" type="ScrollContainer" parent="MainPane"]
margin_left = 74.0
margin_right = 1900.0
margin_bottom = 979.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SettingsContainer" type="VBoxContainer" parent="MainPane/ScrollContainer"]
margin_right = 1826.0
margin_bottom = 979.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DisplayTitle" type="Label" parent="MainPane/ScrollContainer/SettingsContainer"]
margin_right = 1826.0
margin_bottom = 28.0
theme = ExtResource( 7 )
text = "Display"
uppercase = true

[node name="WindowModeButton" parent="MainPane/ScrollContainer/SettingsContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 32.0
margin_right = 1826.0
margin_bottom = 58.0

[node name="WindowResolutionButton" parent="MainPane/ScrollContainer/SettingsContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 62.0
margin_right = 1826.0
margin_bottom = 88.0

[node name="SoundTitle" type="Label" parent="MainPane/ScrollContainer/SettingsContainer"]
margin_top = 92.0
margin_right = 1826.0
margin_bottom = 118.0
text = "Sound"
uppercase = true

[node name="LobbyTitle" type="Label" parent="MainPane/ScrollContainer/SettingsContainer"]
margin_top = 122.0
margin_right = 1826.0
margin_bottom = 148.0
text = "Lobby"
uppercase = true

[node name="NetworkTitle" type="Label" parent="MainPane/ScrollContainer/SettingsContainer"]
margin_top = 152.0
margin_right = 1826.0
margin_bottom = 178.0
text = "Network"
uppercase = true

[node name="KeybindingsTitle" type="Label" parent="MainPane/ScrollContainer/SettingsContainer"]
margin_top = 182.0
margin_right = 1826.0
margin_bottom = 208.0
text = "Keybindings"
uppercase = true

[node name="AccesibilityTitle" type="Label" parent="MainPane/ScrollContainer/SettingsContainer"]
margin_top = 212.0
margin_right = 1826.0
margin_bottom = 238.0
text = "Accessibility"
uppercase = true
